# UD-Cpp

./: CMakeLists.txt  README.md
Debug/: Datos.sqlite  UD-ProyectoProgIV  makefile  prueba.txt
Debug/src/: Api.d  BaseDeDatos.d  Entrevistado.d  Estadisticas.d  Persona.d  Text.d  Usuario.d  main.d  subdir.mk
src/: Api.c  Api.h  BaseDeDatos.c  BaseDeDatos.h  Entrevistado.cpp  Entrevistado.h  Estadisticas.h  Persona.cpp  Persona.h  Text.c  Text.h  Usuario.cpp  Usuario.h  main.cpp  main.h
